--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">HeartRate-1</string>
+    <string name="app_name">Heart Rate</string>
+    <string name="label_bmp">BMP</string>
+    <string name="label_help">Help</string>
+    <string name="label_measure">Measure</string>
+    <string name="label_history">History</string>
+    <string name="label_start">Start</string>
+    <string name="text_vision">Version 0.0.1</string>
+    <string name="text_rate_original">000</string>
+    <string name="the_latest_measurement">The latest measurement</string>
+    <string name="title_help">Put your finger on the camera and press the start button</string>
 </resources>
