16272_Create_ui_Save_measure_heartbeat_screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,18 @@
     <string name="label_history">History</string>
     <string name="label_start">Start</string>
     <string name="label_pause">Pause</string>
+    <string name="label_save">Save</string>
     <string name="text_vision">Version 0.0.1</string>
     <string name="text_rate_original">000</string>
+    <string name="text_save_heart">Detailed measurement results</string>
     <string name="title_the_latest_measurement">The latest measurement</string>
+    <string name="title_before_training">Before training</string>
+    <string name="title_after_training">After training</string>
+    <string name="title_heavy_training">Heavy training</string>
+    <string name="title_rested">Rested</string>
+    <string name="title_general">General</string>
+    <string name="title_note">Note</string>
+    <string name="title_status">Status</string>
     <string name="title_help">Put your finger on the camera and press the start button</string>
     <string name="title_measuring_heart_rate">MEASURING HEART RATE</string>
     <string name="title_please_put_your_hand_on_the_camera">Please put your hand on the camera</string>
