--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="title_help">Put your finger on the camera and press the start button</string>
     <string name="title_measuring_heart_rate">MEASURING HEART RATE</string>
     <string name="title_please_put_your_hand_on_the_camera">Please put your hand on the camera</string>
+    <string name="title_add_data_successfully">Add data successfully</string>
+    <string name="title_add_data_failed">Add data failed</string>
 </resources>
