16282_Create_UI_Notificaion

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -39,4 +39,5 @@
     <string name="title_the_latest_measurement">d</string>
     <string name="title_time_notification">d</string>
     <string name="title_vietnamese">d</string>
+    <string name="title_notification">d</string>
 </resources>
