--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -40,4 +40,5 @@
     <string name="title_time_notification">08:00</string>
     <string name="title_vietnamese">Tiếng việt</string>
     <string name="label_bmp">BMP</string>
+    <string name="title_notification">Đến giờ đo nhip tim</string>
 </resources>
